<resources>
    <string name="app_name">INF2BM Login</string>

    <string name="app_slogan">Only one world</string>
    <string name="app_welcome">Be welcome</string>
    <string name="text_forgot_password">Forgot password?</string>
    <string name="text_sign_in">Sign In</string>
    <string name="text_password">Password</string>
    <string name="text_email_or_username">Email or username</string>
    <string name="text_error_fill_mandatory_information">Mandatory information</string>
    <string name="text_new_user">New User</string>


</resources>