<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

 <androidx.appcompat.widget.AppCompatImageView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:src="@drawable/sea"
     android:scaleType="center"/>


    <View android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_layer_gradient" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_slogan"
                android:text="@string/app_slogan"
                android:textColor="@color/white"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="18dp"
                style="@style/TextAppearance.AppCompat.Headline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/editText_credentials" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/editText_credentials"
                android:inputType="text"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="24dp"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:background="@drawable/bg_edit_normal"
                android:hint="@string/text_email_or_username"
                android:textColorHint="@color/white"
                android:drawableRight="@drawable/ic_person"
                android:drawableTint="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/editText_password" />

            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/editText_password"
                android:inputType="text"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="24dp"
                android:paddingStart="18dp"
                android:paddingEnd="18dp"
                android:background="@drawable/bg_edit_normal"
                android:hint="@string/text_password"
                android:textColorHint="@color/white"
                android:drawableRight="@drawable/ic_password"
                android:drawableTint="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/button_sign_in"   />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/button_sign_in"
                android:text="@string/text_sign_in"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold"
                android:letterSpacing="0.04"
                android:textColor="@color/white"
                android:layout_marginEnd="18dp"
                android:layout_marginStart="18dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/bg_button_normal"
                app:layout_constraintBottom_toTopOf="@+id/linear_layout_bottom"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/linear_layout_bottom"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView_forgot_password"
                        android:text="@string/text_forgot_password"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:layout_marginBottom="12dp"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView_new_user"
                        android:text="@string/text_new_user"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:layout_marginBottom="12dp"/>


                </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>